...
      $0.width.equalTo(stack).priority(750)
      $0.width.lessThanOrEqualTo(360)
      $0.height.equalTo(image.snp.width)
    }
    image.addSubview(activity)
    activity.snp.makeConstraints { $0.center.equalToSuperview() }
    image.accessibilityIdentifier = "export-qr-image"
    previous.accessibilityIdentifier = "previous-qr"
    nextButton.accessibilityIdentifier = "next-qr"
    previous.isEnabled = false
    nextButton.isEnabled = false
    activity.startAnimating()
  }

  override func viewDidAppear(_ animated: Bool) {
...
